infra/k8s/comment-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comment-depl

spec:
  replicas: 1
  selector:
    matchLabels:
      app: comment
  template:
    metadata:
      labels:
        app: comment

    spec:
      containers:
        - name: comment
          image: comment_v1
          imagePullPolicy: Never

---
apiVersion: v1
kind: Service
metadata:
  name: comment-clusterip-srv
spec:
  selector:
    app: comment
  type: ClusterIP
  ports:
    - name: comment
      protocol: TCP
      port: 4002
      targetPort: 4002
