infra/k8s/comment-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: comment-srv

spec:
  type: NodePort
  selector:
    app: comment
  ports:
    - name: comment
      protocol: TCP
      port: 4002
      targetPort: 4002
