infra/k8s/frontend-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-depl

spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
        - name: frontend
          image: frontend_v1
          imagePullPolicy: Never

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-clusterip-srv
spec:
  selector:
    app: frontend
  type: ClusterIP
  ports:
    - name: frontend
      protocol: TCP
      port: 3000
      targetPort: 3000
