infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: posts.com
      http:
        paths:
          - path: /posts
            pathType: Prefix
            backend:
              service:
                name: posts-clusterip-srv
                port:
                  number: 4001
          - path: /send-posts
            pathType: Prefix
            backend:
              service:
                name: posts-clusterip-srv
                port:
                  number: 4001
          - path: /posts/id/comments
            pathType: Prefix
            backend:
              service:
                name: comment-clusterip-srv
                port:
                  number: 4002
          - path: /send-posts/id/comments
            pathType: Prefix
            backend:
              service:
                name: comment-clusterip-srv
                port:
                  number: 4002
